# octree-pointcloud-renderer

./: .gitignore  README.md
point-cloud-renderer/: .clang-format  CMakeLists.txt  Makefile
point-cloud-renderer/lib/glad2/include/glad/: gl.h
point-cloud-renderer/shaders/: bbox-frag.glsl  pc-frag.glsl  vertex.glsl
point-cloud-renderer/src/: main.cpp
point-cloud-renderer/src/boundingbox/: boundingbox.cpp  boundingbox.h
point-cloud-renderer/src/buffers/: buffers.cpp  buffers.h
point-cloud-renderer/src/camera/: camera.cpp  camera.h
point-cloud-renderer/src/mouse/: mouse.cpp  mouse.h
point-cloud-renderer/src/octree/: octree-node.cpp  octree-node.h
point-cloud-renderer/src/octree/states/: states.cpp  states.h
point-cloud-renderer/src/point-cloud/: point-cloud.cpp  point-cloud.h
point-cloud-renderer/src/point-cloud/builder/: builder.cpp  builder.h
point-cloud-renderer/src/shader-compiler/: shader-compiler.cpp  shader-compiler.h
point-cloud-renderer/src/timer/: timer.cpp  timer.h
point-cloud-renderer/src/view/: view.h
